--- a/nextjs-blog/src/styles/globals.css
+++ b/nextjs-blog/src/styles/globals.css
@@ -1,3 +1,79 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: #E5D9B6;
+}
+
+body {
+  color: grey;
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+svg {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.geoMap {
+  background-color: #E5D9B6;
+  border-radius: 1%;
+}
+
+.gradientChart {
+  margin:1%;
+  display: flex;
+  max-height: 3.5rem;
+  max-width: 25rem;
+}
+
+.headerBanner {
+  background-position: center;
+  background-color: #285430;
+  width: 100%;
+  height: 190px;
+}
+
+.form__field {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.logo {
+  max-height: 150px;
+  max-width: fit-content;
+  position:absolute;
+  z-index: inherit;
+  top: 2rem;
+  right: 2rem;
+}
+
+
+/* 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -21,6 +97,7 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -53,43 +130,6 @@
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
+
   }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: grey;
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
-svg {
-  display: inline-block;
-  vertical-align: middle;
-}
+} */
